advanced on SIPU bugfixes