@@ -75,7 +75,9 @@ subprojects {
     }
 
     dependencies {
-        implementation group: 'org.scala-lang', name: 'scala-library', version: '2.13.7'
+        implementation group: 'org.scala-lang', name: 'scala-library', version: '2.13.10'
+        implementation group: 'org.jetbrains', name: 'annotations', version: '16.0.1'
+
         implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
         implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
     }
@@ -118,6 +120,7 @@ subprojects {
     }
 
     tasks.withType(JavaCompile) {
+        it.options.compilerArgs.add('--enable-preview')
         sourceCompatibility = '19'
         targetCompatibility = '19'
     }
